--- a/.github/workflows/02-workflow-events.yaml
+++ b/.github/workflows/02-workflow-events.yaml
@@ -1,14 +1,14 @@
 name: 02-workflow-events
 
 on:
-  push:
-    branches:
-      - main
+  # push:
+  #   branches:
+  #     - main
   pull_request:
     branches:
       - main
-  schedule:
-    - cron: '*/5 * * * *'        
+  # schedule:
+  #   - cron: '*/5 * * * *'        
   workflow_dispatch:
 
 jobs:
