--- a/.github/workflows/03-workflow-runners.yaml
+++ b/.github/workflows/03-workflow-runners.yaml
@@ -14,4 +14,19 @@ jobs:
         run: |
           echo "This job is running on an Ubuntu runner"
           echo "Runner OS is $RUNNER_OS"
+  windows-echo:
+    runs-on: windows-latest
+    steps:
+      - name: Show OS
+        shell: bash
+        run: |
+          echo "This job is running on a Windows runner"
+          echo "Runner OS is $RUNNER_OS"
+  # macos-echo:
+  #   runs-on: macos-latest
+  #   steps:
+  #     - name: Show OS
+  #       run: |
+  #         echo "This job is running on a macOS runner"
+  #         echo "Runner OS is $RUNNER_OS"
       
