--- a/.github/workflows/03-workflow-runners.yaml
+++ b/.github/workflows/03-workflow-runners.yaml
@@ -1,9 +1,9 @@
 name: 03-workflow-runners
 
 on:
-  # push:
-  #   branches:
-  #     - main
+  push:
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
@@ -22,11 +22,10 @@ jobs:
         run: |
           echo "This job is running on a Windows runner"
           echo "Runner OS is $RUNNER_OS"
-  # macos-echo:
-  #   runs-on: macos-latest
-  #   steps:
-  #     - name: Show OS
-  #       run: |
-  #         echo "This job is running on a macOS runner"
-  #         echo "Runner OS is $RUNNER_OS"
-      
+  macos-echo:
+    runs-on: macos-latest
+    steps:
+      - name: Show OS
+        run: |
+          echo "This job is running on a macOS runner"
+          echo "Runner OS is $RUNNER_OS"
