--- a/.github/workflows/06-contexts.yaml
+++ b/.github/workflows/06-contexts.yaml
@@ -2,9 +2,9 @@ name: 06-contexts
 run-name: 06-Contexts | DEBUG - ${{ inputs.debug }}
 
 on:
-  push:
-    branches:
-      - main
+  # push:
+  #   branches:
+  #     - main
   workflow_dispatch:
     inputs:
       debug:
@@ -60,7 +60,7 @@ jobs:
         run: |
           echo "Workflow env: $MY_WORKFLOW_VAR"
           echo "Overwritten env: $MY_OVERWRITTEN_VAR"
-          echo "Job env: $MY_JOB_VAR"
+          echo "Job env: $MY_JOB_VAR"                  # This will be empty
 
         
     
