--- a/.github/workflows/07-expressions.yaml
+++ b/.github/workflows/07-expressions.yaml
@@ -1,4 +1,8 @@
 name: 07-Expressions
+run-name: 07-Expressions | DEBUG - ${{ inputs.debug && 'ON' || 'OFF' }}
+
+env:
+  SOME_VAR: ${{ vars.SOME_VAR || 'default_value' }}
 
 on:
   push:
@@ -14,14 +18,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: '[debug] Print start-up data'
-        if: inputs.debug
+        if: ${{ inputs.debug }}
         run: |
           echo "Triggered by: ${{ github.event_name }}"
           echo "Branch: ${{ github.ref }}"
           echo "SHA: ${{ github.sha }}"
           echo "Runner OS: ${{ runner.os }}"
       - name: '[debug] Print when triggered from main'
-        if: inputs.debug && github.ref == 'refs/heads/main'
+        if: ${{ inputs.debug && github.ref == 'refs/heads/main' }}
         run: |
           echo "I was triggered from the main branch"
       - name: Always run
