--- a/.github/workflows/07-expressions.yaml
+++ b/.github/workflows/07-expressions.yaml
@@ -1,11 +1,11 @@
-name: 07-Expressions
+name: 07-expressions
 run-name: 07-Expressions | DEBUG - ${{ inputs.debug && 'ON' || 'OFF' }}
 
 env:
   SOME_VAR: ${{ vars.SOME_VAR || 'default_value' }}
 
 on:
-  push:
+  # push:
   workflow_dispatch:
     inputs:
       debug:
